Fix pin modal stretching image

--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -43,6 +43,7 @@
 
 .new-pin-form img {
   height: 250px;
+  width: auto;
 }
 
 .create-pin-title {
